added images and formatting

--- a/pages/goods.html
+++ b/pages/goods.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Хэдер</div>
+            <div class="header">Головняк</div>
             <div class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
@@ -23,23 +23,23 @@
                 <h2 class="section-title">Наши товары</h2>
                 <div class="products-grid">
                     <div class="product-card">
-                        <img class="product-image" src="../images/goods1.jpg" alt="Фото товара 1">
-                        <h3 class="product-name">Товар 1</h3>
-                        <p class="product-price">Цена товара 1</p>
+                        <img class="product-image" src="../images/pierogi.jpg" alt="Фото товара 1">
+                        <h3 class="product-name">Пельмени</h3>
+                        <p class="product-price">500р.</p>
                     </div>
                     <div class="product-card">
-                        <img class="product-image" src="../images/goods2.jpg" alt="Фото товара 2">
-                        <h3 class="product-name">Товар 2</h3>
-                        <p class="product-price">Цена товара 2</p>
+                        <img class="product-image" src="../images/spag.jpg" alt="Фото товара 2">
+                        <h3 class="product-name">Макароны</h3>
+                        <p class="product-price">255р.</p>
                     </div>
                     <div class="product-card">
-                        <img class="product-image" src="../images/goods3.jpg" alt="Фото товара 3">
-                        <h3 class="product-name">Товар 3</h3>
-                        <p class="product-price">Цена товара 3</p>
+                        <img class="product-image" src="../images/grilled.jpg" alt="Фото товара 3">
+                        <h3 class="product-name">Жаренный сыр</h3>
+                        <p class="product-price">[stackoverflow]</p>
                     </div>
                 </div>
             </div>
-            <div class="footer">Футер</div>    
+            <div class="footer">Лапки</div>    
         </div>
     </body>
 </html>
