--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Хэдер</div>
+            <div class="header">Головняк</div>
             <div class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
@@ -23,15 +23,15 @@
                 <div class="contacts-container">
                     <h2 class="section-title">Контакты</h2>
                     <div class="contact-info">
-                        <p>Адрес электронной почты: astafev@mirea.ru</p>
+                        <p>Адрес электронной почты: rezarsyirkov@fur.gay</p>
                     </div>
                     <div class="contact-info">
-                        <p>Адрес: г. Москва, ул. Пушкина, д. Колотушкина</p>
+                        <p>Адрес: г. Москва, ул. Пушная, д. 621</p>
                     </div>
-                    <button class="contact-button">Позвоните мне</button>
+                    <button class="contact-button">Позвоните мне (не надо, умоляю)</button>
                 </div>
             </div>
-            <div class="footer">Футер</div>    
+            <div class="footer">Лапки</div>    
         </div>
     </body>
 </html>
