--- a/pages/news.html
+++ b/pages/news.html
@@ -22,19 +22,19 @@
             <div class="content">
                 <div class="news-container">
                     <div class="news-card">
-                        <h2 class="news-title">Новость 1</h2>
-                        <p class="news-meta">01.01.2025 12:00 Р.У. Астафьев</p>
-                        <p class="news-text">Текст новости 1. Бла-бла</p>
+                        <h2 class="news-title">Навравл в резюме</h2>
+                        <p class="news-meta">01.12.2025 19:00 М.В. Кочегаров</p>
+                        <p class="news-text">Жоска наврунькал на позицию дикого аналитика.</p>
                     </div>
                     <div class="news-card">
-                        <h2 class="news-title">Новость 2</h2>
-                        <p class="news-meta">01.01.2025 12:00 Р.У. Остафьев</p>
-                        <p class="news-text">Текст новости 2. Бла-бла</p>
+                        <h2 class="news-title">Сгонял на ДраКон</h2>
+                        <p class="news-meta">09.12.2023 10:00 М.В. Кочегаров</p>
+                        <p class="news-text">Был на интересном фесте после чего слёг на 2 недели с простудой :[</p>
                     </div>
                     <div class="news-card">
-                        <h2 class="news-title">Новость 3</h2>
-                        <p class="news-meta">01.01.2025 12:00 Р.У. Естафьев</p>
-                        <p class="news-text">Текст новости 3. Бла-бла</p>
+                        <h2 class="news-title">Весёлая дата</h2>
+                        <p class="news-meta">03.06.2021 1:00 М.В. Кочегаров</p>
+                        <p class="news-text">Произошла очень весёлая дата. Не знаю что написать просто рандомный текст зато руками.</p>
                     </div>
                 </div>
             </div>
