final push for this project

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -23,7 +23,7 @@
                 <div class="contacts-container">
                     <h2 class="section-title">Контакты</h2>
                     <div class="contact-info">
-                        <p>Адрес электронной почты: rezarsyirkov@fur.gay</p>
+                        <p>Адрес электронной почты: rezarsyirkov@vk.com</p>
                     </div>
                     <div class="contact-info">
                         <p>Адрес: г. Москва, ул. Пушная, д. 621</p>
