--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="page-container">
-            <div class="header">Морды</div>
+            <div class="header">Головняк</div>
             <div class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="index.html">Главная</a></li>
