--- a/pages/practices.html
+++ b/pages/practices.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практики</title>
-    <link rel="stylesheet" href="..style/styles.css">
-</head>
-<body>
-    <div class="page-container">
-        <div class="header">Моськи</div>
-        <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
-                <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
-                <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li> 
-                <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
-                <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
-            </ul>
-        </nav>
-        <main class="content">
-            <div class="card">
-                <h1>Практики студента-айтишника</h1>
-                <p class="subtitle">Фронтенд — начало пути, бэкенд — призвание</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Практики</title>
+        <link rel="stylesheet" href="../style/styles.css">
+    </head>
+    <body>
+        <div class="page-container">
+            <div class="header">Головняк</div>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Главная</a></li>
+                    <li class="nav-item"><a class="nav-link" href="news.html">Новости</a></li>
+                    <li class="nav-item"><a class="nav-link" href="practices.html">Практики</a></li>
+                    <li class="nav-item"><a class="nav-link" href="goods.html">Товары</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacts.html">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="content">
+                <div class="card">
+                    <h1>Мои практики</h1>
+                    <p class="subtitle">Умный в гору не пойдёт.<br>Умный человек в очках скачать обои.</p>
 
-                <section class="practice-section">
-                    <h2>Текущие практики</h2>
-                    <ul class="practice-list">
-                        <li>Разработка адаптивного веб-интерфейса для внутреннего сервиса университета (HTML, CSS, JavaScript)</li>
-                        <li>Изучение основ Node.js и Express — первые шаги в серверной разработке</li>
-                        <li>Работа с REST API: создание и тестирование собственного мини-бэкенда</li>
-                        <li>Практика по базам данных: проектирование схемы и запросы в PostgreSQL</li>
-                    </ul>
-                </section>
+                    <section class="practice-section">
+                        <h2>Текущие практики</h2>
+                        <ul class="practice-list">
+                            <li>Разработка глубоко уважаемой никем CRM системы с внедрением технологий кросплатформенности</li>
+                            <li>Разработка ПО для малинки в 10-ом классе межгалактической академии</li>
+                            <li>Работа с Django в целях изучания python в среде разработки сайтов</li>
+                            <li>Практика по базам данных: проектирование схемы и запросы в PostgreSQL с болью и негодованием</li>
+                        </ul>
+                    </section>
 
-                <section class="reflection">
-                    <h2>Размышления</h2>
-                    <p>
-                        Начинал с увлечения визуальной частью сайтов — анимации, градиенты, плавные переходы. 
-                        Но чем глубже погружаюсь в логику приложений, тем больше тянет к серверной стороне. 
-                        Оказывается, мне нравится строить «мозги» системы, а не только её «лицо».
-                    </p>
-                    <p>
-                        Возможно, в будущем стану fullstack-разработчиком — чтобы управлять всем процессом от идеи до реализации.
-                    </p>
-                </section>
+                    <section class="reflection">
+                        <h2>Мюсли</h2>
+                        <p>
+                            Если вы это читаете, значит что вам это может быть интересно, поэтому напишу просто что я люблю зелёный чай с сырком картошкой :3
+                        </p>
+                        <p>
+                            Возможно, в будущем стану Фуллстек-разработчиком. Но это не точно]
+                        </p>
+                    </section>
+                </div>
             </div>
-        </main>
-        <footer class="footer">Лапки</footer>
-    </div>
-</body>
+            <footer class="footer">Лапки</footer>
+        </div>
+    </body>
+
 </html>
