Edited one last time

--- a/pages/practices.html
+++ b/pages/practices.html
@@ -23,7 +23,7 @@
                     <h1>Мои практики</h1>
                     <p class="subtitle">Умный в гору не пойдёт.<br>Умный человек в очках скачать обои.</p>
 
-                    <section class="practice-section">
+                    <div class="practice-section">
                         <h2>Текущие практики</h2>
                         <ul class="practice-list">
                             <li>Разработка глубоко уважаемой никем CRM системы с внедрением технологий кросплатформенности</li>
@@ -31,9 +31,9 @@
                             <li>Работа с Django в целях изучания python в среде разработки сайтов</li>
                             <li>Практика по базам данных: проектирование схемы и запросы в PostgreSQL с болью и негодованием</li>
                         </ul>
-                    </section>
+                    </div>
 
-                    <section class="reflection">
+                    <div class="reflection">
                         <h2>Мюсли</h2>
                         <p>
                             Если вы это читаете, значит что вам это может быть интересно, поэтому напишу просто что я люблю зелёный чай с сырком картошкой :3
@@ -41,7 +41,7 @@
                         <p>
                             Возможно, в будущем стану Фуллстек-разработчиком. Но это не точно]
                         </p>
-                    </section>
+                    </div>
                 </div>
             </div>
             <footer class="footer">Лапки</footer>
