Final Final Changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="content">
                 <div class="profile-header">
-                    <h1 class="profile-title">Информация об авторе</h1>
+                    <h1 class="profile-title">🐾 Информация об авторе 🐾</h1>
                     <img class="profile-photo" src="images/image.png" alt="Фото автора">
                     <h2 class="profile-name">Кочегаров Михаил Влажимирович</h2>
                     <p class="profile-group">ЭФБО-04-24</p>
