--- a/pages/practices.html
+++ b/pages/practices.html
@@ -36,7 +36,7 @@
                     <div class="reflection">
                         <h2>Мюсли</h2>
                         <p>
-                            Если вы это читаете, значит что вам это может быть интересно, поэтому напишу просто что я люблю зелёный чай с сырком картошкой :3
+                            Если вы это читаете, значит что вам это может быть интересно, поэтому напишу просто что я люблю зелёный чай с сырком картошкой Б.Ю. Александров :3
                         </p>
                         <p>
                             Возможно, в будущем стану Фуллстек-разработчиком. Но это не точно]
