Final Final Final push

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 
                 <div class="about-me">
-                    <p>Обо мне: Я родился в Саратов в середине нулевых, затем переехал в Москву родителями, и спустя 19 лет я пишу этот текст, чтобы вы его прочитали :D</p>
+                    <p>Обо мне: Я&nbsp;родился в&nbsp;Саратов в&nbsp;середине нулевых, затем переехал в&nbsp;Москву родителями, и&nbsp;спустя 19&nbsp;лет я&nbsp;пишу этот текст, чтобы вы&nbsp;его прочитали :D</p>
                 </div>
                 
                 <div class="skills-container">
