--- a/pages/practices.html
+++ b/pages/practices.html
@@ -36,10 +36,10 @@
                     <div class="reflection">
                         <h2>Мюсли</h2>
                         <p>
-                            Если вы это читаете, значит что вам это может быть интересно, поэтому напишу просто что я люблю зелёный чай с сырком картошкой Б.Ю. Александров :3
+                            Если вы&nbsp;это читаете, значит что вам это может быть интересно, поэтому напишу просто что я&nbsp;люблю зелёный чай с&nbsp;сырком картошкой Б.Ю. Александров :3
                         </p>
                         <p>
-                            Возможно, в будущем стану Фуллстек-разработчиком. Но это не точно]
+                            Возможно, в&nbsp;будущем стану Фуллстек-разработчиком. Но&nbsp;это не&nbsp;точно]
                         </p>
                     </div>
                 </div>
